--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,7 @@
 <h1>Workshop Auth0</h1>
 <div class="d-flex">
   <button (click)="login()">Login</button>
-  
   <button (click)="logout()">Logout</button>
+
+  <p>Logged in as: {{ (user$ | async)?.name }}</p>
 </div>
