--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,3 +6,7 @@
 
   <p>Logged in as: {{ (user$ | async)?.name }}</p>
 </div>
+<div class="d-flex">
+  <button (click)="authenticate()">Get Public Message</button>
+  <button (click)="authorize()">Get Private Message</button>
+</div>
