show text on method calls

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,5 +8,7 @@
 </div>
 <div class="d-flex">
   <button (click)="authenticate()">Get Public Message</button>
+  <p>{{ authenticateText }}</p>
   <button (click)="authorize()">Get Private Message</button>
+  <p>{{ authorizeText }}</p>
 </div>
